--- a/examples/apis/NetApiCon/NetApiCon.csproj
+++ b/examples/apis/NetApiCon/NetApiCon.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Api.Tests.Common\Api.Tests.Common.csproj" />
     <ProjectReference Include="..\NetApi.Common\NetApi.Common.csproj" />
   </ItemGroup>
 
