--- a/examples/elsa/Elsa.Studio/Elsa.Studio.csproj
+++ b/examples/elsa/Elsa.Studio/Elsa.Studio.csproj
@@ -7,12 +7,11 @@
   </PropertyGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="Elsa.Api.Client" Version="3.1.0" />
-		<PackageReference Include="Elsa.Studio.Core.BlazorServer" Version="3.1.0" />
-		<PackageReference Include="Elsa.Studio.Dashboard" Version="3.1.0" />
-		<PackageReference Include="Elsa.Studio.Login.BlazorServer" Version="3.1.0" />
-		<PackageReference Include="Elsa.Studio.Shell" Version="3.1.0" />
-		<PackageReference Include="Elsa.Studio.Workflows" Version="3.1.0" />
+		<PackageReference Include="Elsa.Studio.Core.BlazorServer" Version="3.2.0-rc5" />
+		<PackageReference Include="Elsa.Studio.Dashboard" Version="3.2.0-rc5" />
+		<PackageReference Include="Elsa.Studio.Login.BlazorServer" Version="3.2.0-rc5" />
+		<PackageReference Include="Elsa.Studio.Shell" Version="3.2.0-rc5" />
+		<PackageReference Include="Elsa.Studio.Workflows" Version="3.2.0-rc5" />
 	</ItemGroup>
 
 	<ItemGroup>
