--- a/examples/elsa/Elsa.Server/Elsa.Server.csproj
+++ b/examples/elsa/Elsa.Server/Elsa.Server.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Elsa.Workflows.Api" Version="3.2.0-rc5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Workflows\" />
+  </ItemGroup>
+
 </Project>
