--- a/examples/elsa/Elsa.Server/Elsa.Server.csproj
+++ b/examples/elsa/Elsa.Server/Elsa.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -16,6 +16,7 @@
     <PackageReference Include="Elsa.JavaScript" Version="3.2.0-rc5" />
     <PackageReference Include="Elsa.Scheduling" Version="3.2.0-rc5" />
     <PackageReference Include="Elsa.Webhooks" Version="3.2.0-rc5" />
+    <PackageReference Include="Elsa.WorkflowProviders.BlobStorage" Version="3.2.0-rc5" />
     <PackageReference Include="Elsa.Workflows.Api" Version="3.2.0-rc5" />
   </ItemGroup>
 
