--- a/examples/elsa/Elsa.Server/appsettings.json
+++ b/examples/elsa/Elsa.Server/appsettings.json
@@ -12,7 +12,7 @@
         "EventTypes": [
           "RunTask"
         ],
-        "Url": "https://localhost:5002/api/webhooks/run-task"
+        "Url": "http://localhost:5003/api/webhooks/run-task"
       }
     ]
   }
