--- a/examples/pack-masstransit/Saga.Inventory.Service/Saga.Inventory.Service.csproj
+++ b/examples/pack-masstransit/Saga.Inventory.Service/Saga.Inventory.Service.csproj
@@ -10,10 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.2" />
+	  <PackageReference Include="MassTransit.Azure.ServiceBus.Core" Version="8.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.1" />
   </ItemGroup>
 
   <ItemGroup>
